--- a/src/pages/Hobbies.css
+++ b/src/pages/Hobbies.css
@@ -4,6 +4,7 @@
   left: 0px;
   right: 0px;
   text-align: center;
+  margin-left: 70px;
 }
 
 .images {
@@ -20,4 +21,5 @@
 
 .contentHobbies p {
   margin-top: 20px;
+  margin-bottom: 40px;
 }
